--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -6,8 +6,8 @@ $app-background-color: #000000;
 $navbar_opacity: rgba(11, 11, 14, 0.7);
 $navbar: #232323;
 $dark: #050d21;
-$white: #ffffff;
-$gray: #606060;
+$white: #FEFEFE;
+$gray: #B8B8B8;
 $links: rgb(242, 242, 242);
 $accent: #FFD166;
 $accent-hover: #E9BF5D;
