--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -49,21 +49,19 @@ body._locked {
 
 ::-webkit-scrollbar {
   position: relative;
-  width: 7px;
-  /* height: 7px; */
-  /* background-color: rgba(43, 43, 43, 0.192); */
+  width: 15px;
+  height: 15px;
+  box-shadow: inset 0 0 5px rgb(199, 199, 199);
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  /* border: 2px solid #303030; */
+  border-radius: 10px;
+  border: 5px solid transparent;
   background-color: rgb(34, 34, 34);
   background-clip: padding-box;
 }
 ::-webkit-scrollbar-track {
-  box-shadow: 5px 5px 5px -5px rgba(37, 37, 37, 0.3) inset;
-  border-radius: 5px;
-  margin: 10px;
+margin: 5px;
 }
 
 ::-webkit-scrollbar-corner {
