Bug fix lang menu, navbar. Start form validation

--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -14,7 +14,8 @@ $accent: #ffd166;
 $accent-hover: #f3c761;
 $add-dark-blue: linear-gradient(252.85deg, #0e0e25 0%, #0e0e25 100%);
 // $blue-gradient: linear-gradient(252.85deg, #006fbf 0%, #7000c0 100%);
-$blue-gradient: linear-gradient(252.85deg, #004272 0%, #47007a 100%);
+$accent-gradient: linear-gradient(to right, #ffa751, #ffe259);
+
 
 // FONTS
 // $font-extraLight: 200;
