--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap');
 
 #app {
   background-color: rgb(255, 255, 255);
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 /* ------------------------------------------ */
@@ -48,8 +48,9 @@ html {
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   max-width: 100%;
+  position: relative;
 }
 
 body._locked {
@@ -57,7 +58,7 @@ body._locked {
 }
 
 ::-webkit-scrollbar {
-  position: relative;
+  /* position: relative; */
   width: 15px;
   height: 15px;
   box-shadow: inset 0 0 5px rgb(199, 199, 199);
@@ -70,7 +71,7 @@ body._locked {
   background-clip: padding-box;
 }
 ::-webkit-scrollbar-track {
-margin: 5px;
+  margin: 5px;
 }
 
 ::-webkit-scrollbar-corner {
@@ -84,4 +85,13 @@ margin: 5px;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+._invisible {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  width: 1px;
+  height: 1px;
+  clip: rect(0 0 0 0);
 }
