--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -71,6 +71,10 @@ $header2: 20px;
 $header3: 16px;
 $header4: 14px;
 
+$paragraph: 14px;
+
+$font-controls: 14px;
+
 // FONTS
 // $font-extraLight: 200;
 $font-light: 300;
