Add image gallery based on swiper

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -95,3 +95,9 @@ body._locked {
   height: 1px;
   clip: rect(0 0 0 0);
 }
+
+/* Swiper main styles */
+:root {
+  --swiper-pagination-color: hsl(44, 100%, 70%);
+  --swiper-theme-color: hsl(44, 100%, 70%);
+}
