--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap");
 
 #app {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 /* ------------------------------------------ */
@@ -52,32 +52,37 @@ body {
   position: relative;
 }
 
-body._locked {
+body.--locked {
   overflow: hidden;
 }
 
-::-webkit-scrollbar {
-  /* position: relative; */
+@media (hover: hover) and (pointer: fine) {
+  body.--locked {
+    padding-right: 15px;
+  }
+}
+
+body::-webkit-scrollbar {
   width: 15px;
   height: 15px;
   box-shadow: inset 0 0 5px rgb(199, 199, 199);
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   border: 5px solid transparent;
   background-color: rgb(34, 34, 34);
   background-clip: padding-box;
 }
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   margin: 5px;
 }
 
-::-webkit-scrollbar-corner {
+body::-webkit-scrollbar-corner {
   background-color: transparent;
 }
 
-._unselectable {
+.--unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
