--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -6,10 +6,10 @@ $scrollbar-width: 15px;
 // PALLETE
 $color1: #232323;
 // $color2: #ffd166;
-$color3: #2D4059;
-$color4: #EA5455;
-$color5: #F07B3F;
-$color6: #FFD460;
+$color3: #2d4059;
+$color4: #ea5455;
+$color5: #f07b3f;
+$color6: #ffd460;
 
 // Neutral colors
 $surface: hsl(0, 0%, 100%);
@@ -32,21 +32,21 @@ $outline-variant: hsl(0, 0%, 80%);
 // Accent colors
 $primary: #ffd666;
 $primary-opacity: rgb(255, 214, 102, 20%);
-$primary10:hsl(44, 100%, 10%);
-$primary20:hsl(44, 90%, 20%);
-$primary30:hsl(44, 80%, 30%);
-$primary40:hsl(44, 80%, 40%);
-$primary50:hsl(44, 80%, 50%);
-$primary60:hsl(44, 80%, 60%);
-$primary70:hsl(44, 100%, 70%);
-$primary80:hsl(44, 100%, 80%);
-$primary90:hsl(44, 100%, 90%);
-$primary95:hsl(44, 100%, 95%);
+$primary10: hsl(44, 100%, 10%);
+$primary20: hsl(44, 90%, 20%);
+$primary30: hsl(44, 80%, 30%);
+$primary40: hsl(44, 80%, 40%);
+$primary50: hsl(44, 80%, 50%);
+$primary60: hsl(44, 80%, 60%);
+$primary70: hsl(44, 100%, 70%);
+$primary80: hsl(44, 100%, 80%);
+$primary90: hsl(44, 100%, 90%);
+$primary95: hsl(44, 100%, 95%);
 $on-primary: hsl(0, 0%, 14%);
-$on-primary-url: '%23242424';
+$on-primary-url: "%23242424";
 $primary-container: hsl(0, 0%, 14%);
 $on-primary-container: hsl(44, 100%, 70%);
-$primary-variant:hsl(44, 85%, 65%);
+$primary-variant: hsl(44, 85%, 65%);
 
 $secondary: #242424;
 $on-secondary: hsl(0, 0%, 100%);
@@ -54,7 +54,6 @@ $secondary-opacity70: rgb(36, 36, 36, 70%);
 $secondary-container: hsl(0, 0%, 90%);
 $on-secondary-container: hsl(0, 0%, 14%);
 $secondary-container-variant: hsl(0, 0%, 80%);
-
 
 $tertiary: hsl(20, 86%, 59%);
 $on-tertiary: hsl(20, 86%, 90%);
@@ -97,8 +96,8 @@ $font-medium: 500;
 $font-bold: 700;
 // $font-extraBold: 800;
 
-$font-main: 'Ubuntu', sans-serif;
-$font-mono: 'Ubuntu Mono', monospace;
+$font-main: "Ubuntu", sans-serif;
+$font-mono: "Ubuntu Mono", monospace;
 
 // @font-face {
 //   font-family: mellanissa;
@@ -133,8 +132,7 @@ $mobile: 767px;
     @media (max-width: 500px) {
       @content;
     }
-  }
-  @else {
+  } @else {
     @media (max-width: $point) {
       @content;
     }
@@ -154,3 +152,28 @@ $mobile: 767px;
   }
 }
 
+@mixin scrollbar($width: 15px, $background: false) {
+  &::-webkit-scrollbar {
+    width: $width;
+    height: $width;
+
+    @if $background == true {
+      box-shadow: inset 0 0 5px rgb(199, 199, 199);
+    }
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    border: 5px solid transparent;
+    background-color: rgb(34, 34, 34);
+    background-clip: padding-box;
+  }
+
+  &::-webkit-scrollbar-track {
+    margin: 5px;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+}
