--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -167,3 +167,35 @@ $mobile: 767px;
     background-color: transparent;
   }
 }
+
+// Skeleton loading animation
+$base-color: #cfcfcf;
+$shine-color: #ececec;
+$animation-duration: 2.5s;
+
+@mixin skeleton($offset: 0) {
+  @include background-gradient;
+  animation: shine-lines $animation-duration infinite linear;
+  border-radius: 7px;
+
+  @keyframes shine-lines {
+    0% {
+      background-position: -500px + $offset;
+    }
+
+    40%,
+    100% {
+      background-position: 1000px + $offset;
+    }
+  }
+}
+
+@mixin background-gradient {
+  background-image: linear-gradient(
+    90deg,
+    $base-color 0px,
+    $shine-color 150px,
+    $base-color 300px
+  );
+  background-size: 2000px;
+}
