Move scrollbar styles to mixin

--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -143,7 +143,7 @@ $mobile: 767px;
   }
 }
 
-@mixin scrollbar($width: 15px, $background: false) {
+@mixin scrollbar($width: 15px, $color: $secondary, $background: false) {
   &::-webkit-scrollbar {
     width: $width;
     height: $width;
@@ -155,13 +155,9 @@ $mobile: 767px;
 
   &::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    border: 5px solid transparent;
-    background-color: rgb(34, 34, 34);
+    border: 3px solid transparent;
+    background-color: $color;
     background-clip: padding-box;
-  }
-
-  &::-webkit-scrollbar-track {
-    margin: 5px;
   }
 
   &::-webkit-scrollbar-corner {
