--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -31,7 +31,7 @@ $outline-variant: hsl(0, 0%, 80%);
 
 // Accent colors
 $primary: #ffd666;
-$primary-lighten: #fae884;
+$primary-lighten: #ffe394;
 $primary-opacity: rgb(255, 214, 102, 40%);
 $on-primary: hsl(0, 0%, 14%);
 $on-primary-url: "%23242424";
