Replace font size unit of measurement

--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -63,21 +63,21 @@ $add-dark-blue: linear-gradient(252.85deg, #0e0e25 0%, #0e0e25 100%);
 $accent-gradient: linear-gradient(to right, #ffa751, #ffe259);
 
 // FONT SIZES
-$header1: 24px;
-$header1-mobile: 20px;
-$header2: 20px;
-$header2-mobile: 16px;
-$header3: 16px;
-$header3-mobile: 14px;
-$header4: 14px;
-$header4-mobile: 12px;
+$header1: 2.4rem;
+$header1-mobile: 2rem;
+$header2: 2rem;
+$header2-mobile: 1.6rem;
+$header3: 1.6rem;
+$header3-mobile: 1.4rem;
+$header4: 1.4rem;
+$header4-mobile: 1.2rem;
 
-$paragraph: 14px;
-$paragraph-lg: 16px;
-$paragraph-mobile: 12px;
+$paragraph: 1.4rem;
+$paragraph-lg: 1.6rem;
+$paragraph-mobile: 1.2rem;
 
-$font-controls: 14px;
-$font-controls-mobile: 12px;
+$font-controls: 1.4rem;
+$font-controls-mobile: 1.2rem;
 
 // FONTS
 // $font-extraLight: 200;
