Redesign article cards

--- a/src/assets/_vars.scss
+++ b/src/assets/_vars.scss
@@ -14,6 +14,7 @@ $color6: #ffd460;
 // Neutral colors
 $surface: hsl(0, 0%, 100%);
 $on-surface: hsl(0, 0%, 14%);
+$on-surface-lighten: hsl(0, 0%, 34%);
 $on-surface-variant: hsl(0, 0%, 10%);
 $surface-container-lowest: hsl(0, 0%, 90%);
 $surface-container-low: hsl(0, 0%, 92%);
